tests/baselines/reference/selfReferencesInFunctionParameters.errors.txt
tests/cases/compiler/selfReferencesInFunctionParameters.ts(1,26): error TS2372: Parameter 'x' cannot be referenced in its initializer.
tests/cases/compiler/selfReferencesInFunctionParameters.ts(4,35): error TS2372: Parameter 'x' cannot be referenced in its initializer.
tests/cases/compiler/selfReferencesInFunctionParameters.ts(8,28): error TS2372: Parameter 'y' cannot be referenced in its initializer.
tests/cases/compiler/selfReferencesInFunctionParameters.ts(11,29): error TS2372: Parameter 'b' cannot be referenced in its initializer.


==== tests/cases/compiler/selfReferencesInFunctionParameters.ts (4 errors) ====
    function foo(x: number = x) {
                             ~
!!! error TS2372: Parameter 'x' cannot be referenced in its initializer.
    }
    
    function bar(x0 = "", x: number = x) {
                                      ~
!!! error TS2372: Parameter 'x' cannot be referenced in its initializer.
    }
    
    class C {
        constructor(x = 1, y = y) {
                               ~
!!! error TS2372: Parameter 'y' cannot be referenced in its initializer.
        }
         
        bar(a = "", b: string = b.toString()) {
                                ~
!!! error TS2372: Parameter 'b' cannot be referenced in its initializer.
        }
    }